fix(dark mode): fixing dark mode toggle switch

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -76,7 +76,3 @@
     @apply bg-background text-foreground;
   }
 }
-
-html {
-  transition: background-color 0.3s, color 0.3s;
-}
